# vibe-analyze

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  format.yml  lock-update.yml
src/vibe_analyze/: cli.py  discover.py  llm.py  overview.py  selector.py  tokenize.py  util.py
tests/: conftest.py  test_cli_early_fit.py  test_cli_selection_and_fallback.py  test_files_to_prompt_integration.py
tests/fixtures/sample_project/: README.md
